testing/macro-tests/tests/ui/default_tuple_element_bound.stderr
error[E0277]: the trait bound `icydb::prelude::Principal: Default` is not satisfied
 --> tests/ui/default_tuple_element_bound.rs:3:1
  |
3 | #[tuple(value(item(prim = "Principal")), traits(add(Default)))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `icydb::prelude::Principal`
  |
  = note: this error originates in the attribute macro `tuple` (in Nightly builds, run with -Z macro-backtrace for more info)
