testing/macro-tests/tests/ui/default_tuple_element_bound.rs
use icydb::design::prelude::*;

#[tuple(value(item(prim = "Principal")), traits(add(Default)))]
pub struct InvalidTupleDefault;

fn main() {}
